# exploring-ebpf

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
crates/: README.md
crates/kernelspace/: Cargo.toml  build.rs
crates/kernelspace/src/: main.rs
crates/userspace/: Cargo.toml  build.rs
crates/userspace/src/: error.rs  lib.rs
crates/userspace/src/daemon/: main.rs
crates/userspace/src/network/: config.rs  network.rs
crates/userspace/src/operations/: add.rs  check.rs  del.rs  operations.rs  version.rs
crates/userspace/src/plugins/bridge/: config.rs  main.rs
xdp-starter/: README.md
xdp-starter/ebpf/: Cargo.toml
xdp-starter/ebpf/src/: main.rs
xdp-starter/kernelspace/: Cargo.toml
xdp-starter/kernelspace/src/: main.rs
xdp-starter/userspace/: Cargo.toml  build.rs
